Layout Index complete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <section id="landing-page">
       <nav>
-        <div class="logo__container"></div>
+        <div class="logo__container">
         <figure>
           <img
             id="mv-logo"
@@ -29,23 +29,24 @@
         <ul class="nav__link--list">
           <li class="nav__link" onclick="toggleModal()">
             <a
-              href="#"
+              href="#landing-page"
               class="nav__link--anchor link__hover--effect link__hover--effect--green"
-              >About</a
+              >Home</a
             >
           </li>
           <li class="nav__link">
             <a
-              href="#projects"
+              href="#featured__movies"
               class="nav__link--anchor link__hover--effect link__hover--effect--green"
-              >Projects</a
+              >Movies</a
             >
           </li>
           <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover--effect link__hover--effect--green"
-              >Contact</a
+              >
+              <i class="fa fa-video"></i></a
             >
           </li>
           <li class="nav__link click">
@@ -57,6 +58,88 @@
           </li>
         </ul>
       </nav>
+      <div class="container">
+        <div class="row first__row">
+            <h1 class="title">Australia's <span class="orange__text">best</span> movie <span class="orange__text">streaming platform </span></h1>
+            <h2 class="secondary__title">FIND YOUR <span class="orange__text">FAVOURITE </span>MOVIE</h2>
+            <div class="input__and__button">
+              <input type="text" placeholder="Movie Title, ID, Genre" />
+              <button class="search__btn">
+                <i class="fa fa-video"></i>
+              </button>
+            </div>
+        </div>
+      </div>
+    </section>
+    <section id="featured__movies">
+<div class="container">
+  <div class="row">
+    <h1 class="featured__title orange__text">Featured Movie</h1>
+    <div class="movie__category">
+      <h3 class="category__title">Action</h3>
+      <div class="poster__container">
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMDg2YzI0ODctYjliMy00NTU0LTkxODYtYTNkNjQwMzVmOTcxXkEyXkFqcGdeQXVyNjg2NjQwMDQ@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">John Wick 3 "Parabellum"</p>
+          <p class="year">2019</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">Avengers: Endgame</p>
+          <p class="year">2019</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BNTliYjlkNDQtMjFlNS00NjgzLWFmMWEtYmM2Mzc2Zjg3ZjEyXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">Shang-Chi and the Legend of the Ten Rings</p>
+          <p class="year">2021</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMjI0NmFkYzEtNzU2YS00NTg5LWIwYmMtNmQ1MTU0OGJjOTMxXkEyXkFqcGdeQXVyMjMxOTE0ODA@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">F9: The Fast Saga</p>
+          <p class="year">2021</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BZWYzOGEwNTgtNWU3NS00ZTQ0LWJkODUtMmVhMjIwMjA1ZmQwXkEyXkFqcGdeQXVyMjkwOTAyMDU@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">Top Gun: Maverick</p>
+          <p class="year">2022</p>
+        </div>
+      </div>
+    </div>
+    <div class="movie__category">
+      <h3 class="category__title">Comedy</h3>
+      <div class="poster__container">
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMjIxMjgxNTk0MF5BMl5BanBnXkFtZTgwNjIyOTg2MDE@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">The Wolf of Wall Street</p>
+          <p class="year">2013</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMTcwNzAxMDU1M15BMl5BanBnXkFtZTgwNDE2NTU1MTE@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">22 Jump Street</p>
+          <p class="year">2014</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMjMyNDkzMzI1OF5BMl5BanBnXkFtZTgwODcxODg5MjI@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">Thor: Ragnarok</p>
+          <p class="year">2017</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMDkzNmRhNTMtZDI4NC00Zjg1LTgxM2QtMjYxZDQ3OWJlMDRlXkEyXkFqcGdeQXVyNTU5MjkzMTU@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">Deadpool 2</p>
+          <p class="year">2018</p>
+        </div>
+        <div class="poster">
+          <img src="https://m.media-amazon.com/images/M/MV5BMTM2MTM4MzY2OV5BMl5BanBnXkFtZTcwNjQ3NzI4NA@@._V1_SX300.jpg" alt="" class="poster__img">
+          <p class="movie__title">The Hangover Part II</p>
+          <p class="year">2011</p>
+        </div>
+      </div>
+    </div>
+    <div class="bottom__btn">
+<h1 class="prop__btn">More Movies</h1>
+</div>
+  </div>
+</div>
     </section>
   </body>
 </html>
