--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/c8e4d183c2.js"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js" defer></script>
+    <script src="index.js" src="search.js" defer></script>
   </head>
   <body>
     <nav>
@@ -136,8 +136,8 @@
             FIND YOUR <span class="orange__text">FAVOURITE </span>MOVIE
           </h2>
           <div class="input__and__button">
-            <input type="text" placeholder="Movie Title, ID, Genre" />
-            <button class="search__btn">
+            <input type="text" placeholder="Movie Title, ID, Genre" onchange="onSearchChange(event)"/>
+            <button id="search__btn">
               <i class="fa fa-video"></i>
             </button>
           </div>
@@ -166,7 +166,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">John Wick 3 "Parabellum"</p>
-                <p class="year">2019</p>
+                <p class="year poster__year">2019</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieTwo()">
                 <img
@@ -175,7 +175,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">Avengers: Endgame</p>
-                <p class="year">2019</p>
+                <p class="year poster__year">2019</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieThree()">
                 <img
@@ -186,7 +186,7 @@
                 <p class="movie__title">
                   Shang-Chi and the Legend of the Ten Rings
                 </p>
-                <p class="year">2021</p>
+                <p class="year poster__year">2021</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieFour()">
                 <img
@@ -195,7 +195,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">F9: The Fast Saga</p>
-                <p class="year">2021</p>
+                <p class="year poster__year">2021</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieFive()">
                 <img
@@ -204,7 +204,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">Top Gun: Maverick</p>
-                <p class="year">2022</p>
+                <p class="year poster__year">2022</p>
               </div>
             </div>
           </div>
@@ -218,7 +218,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">The Wolf of Wall Street</p>
-                <p class="year">2013</p>
+                <p class="year poster__year">2013</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieSeven()">
                 <img
@@ -227,7 +227,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">22 Jump Street</p>
-                <p class="year">2014</p>
+                <p class="year poster__year">2014</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieEight()">
                 <img
@@ -236,7 +236,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">Thor: Ragnarok</p>
-                <p class="year">2017</p>
+                <p class="year poster__year">2017</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieNine()">
                 <img
@@ -245,7 +245,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">Deadpool 2</p>
-                <p class="year">2018</p>
+                <p class="year poster__year">2018</p>
               </div>
               <div class="poster" onclick="toggleModal(); getMovieTen()">
                 <img
@@ -254,7 +254,7 @@
                   class="poster__img"
                 />
                 <p class="movie__title">The Hangover Part II</p>
-                <p class="year">2011</p>
+                <p class="year poster__year">2011</p>
               </div>
             </div>
           </div>
